default.css
/* variable declaration*/

:root {
  --mainColor: #eaeaea;
  --secondaryColor:  #fff;

  --borderColor:  #c1c1c1;

  --mainText: black;
  --secondaryText: #4b5156 ;

  --themeDotBorder:  #24292e;

  --previewBg:  rgb(251, 249, 243, 0.8);

  --previewShadow:  #f0ead6;
}

/*For Smooth Theme changing*/

body *{
  transition: 0.3s;
}

/*html{scroll-behavior:smooth}*/

html, body {
  margin: 0;
  padding: 0;
}

h1, h2, h3, h4, h5, h6 {
  color: var(--mainText);
  font-family: 'Russo One', sans-serif;
  font-weight: 500;
}

p, li, span, label, input, textarea {
  color:  var(--secondaryText);
  font-family: 'Roboto Mono', monospace;
}

.s1{
  background-color: var(--mainColor);
  border-bottom: 1px solid var(--borderColor);
  overflow: auto;
}

.s2{
  background-color: var(--secondaryColor);
  border-bottom: 1px solid var(--borderColor);
  overflow: auto;
}

.main-container {
  width: 1200px;
  margin: 0 auto;
}

a{
  text-decoration: none;
  color: #1782b8;
  background-color: #fff;
}

ul {
  list-style: none;
}

h1{font-size: 56px;}
h2{font-size: 36px;}
h3{font-size: 28px;}
h4{font-size: 24px;}
h5{font-size: 20px;}
h6{font-size: 16px;}

.greeting-wrapper{
  display: grid;
  /*border: 2px dashed lightcoral;*/
  min-height: 10em;
  text-align: center;
  align-content: center;
}

.intro-wrapper{
  background-color: var(--secondaryColor);
  /*border: 1px solid var(--borderColor);*/

  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);

  border-radius: 10px 10px 0 0;

  display: grid;
  grid-template-columns: 1fr 1fr; /* 1 fr- 1 fraction */
  grid-template-areas: 
  'nav-wrapper nav-wrapper' 
  'left-column right-column';
}

.nav-wrapper{
  /*border: 1px dashed lightcoral;*/
  grid-area: nav-wrapper;
  border-bottom: 1px solid var(--borderColor);
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--mainColor);
  border-radius: 10px 10px 0 0;
}

.dots-wrapper{
  display: flex;
}

#navigation li {
  display: inline-block;
  margin-right: 5px;
  margin-left: 5px;
}

#dot-1{
  background-color: #FC6058;
}

#dot-2{
  background-color: #FEC02F;
}

#dot-3{
  background-color: #2ACA3E;
}


.browser-dot{
  background-color: black;
  height: 15px;
  width: 15px;
  border-radius: 50%;
  margin: 5px;

  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
}

.left-column{
  /*border: 1px dashed lightcoral;*/
  grid-area: left-column;
  padding-top: 50px;
  padding-bottom: 50px;
}

#profile-pic{
  display: block;
  margin: 0 auto;

  height: 200px;
  width: 200px;
  object-fit: cover;
  border: 2px solid var(--borderColor);
}

#theme-options-wrapper {
  display: flex;
  justify-content: center;
}

.theme-dot{
  height: 30px;
  width: 30px;
  border-radius: 50%;
  background-color: black;

  margin: 5px;
  border: 2px solid var(--themeDotBorder);

  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);

  cursor: pointer;
}

#settings-note{
  font-size: 12px;
  font-style: italic;
  text-align: center;
}

#light-mode{
  background-color: #fff;
}


#blue-mode{
  background-color: #192734;
}

#green-mode{
  background-color: #78866b;
}

#purple-mode{
  background-color: #7E4C74;
}

.theme-dot:hover{
  border-width: 5px;
}

.right-column{
  /*border: 1px dashed lightcoral;*/
  grid-area: right-column;
  display: grid;
  align-content: center;
  padding-top: 50px;
  padding-bottom: 50px;
}

#preview-shadow{
  background-color: var(--previewShadow);
  width: 300px;
  height: 180px;
  padding-left: 30px;
  padding-top: 30px;
}

#preview {
  width: 300px;
  border: 2px solid #17a2b8;
  background-color: var(--previewBg);
  padding: 15px;
  position: relative;
}

.corner {
  height: 7px;
  width: 7px;
  border-radius: 50%;
  border: 2px solid #17a2b8;
  background-color: #fff;
  position: absolute;
}

#corner-tl{
  top: -5px;
  left: -5px;
}

#corner-tr{
 top: -5px;
  right: -5px; 
}

#corner-br{
  bottom: -5px;
  right: -5px;
}

#corner-bl{
  bottom: -5px;
  left: -5px;
}

.about-wrapper{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  padding-bottom: 50px;
  padding-top: 50px;
}

#skills{
  display: flex;
  justify-content: space-evenly;
  background-color: var(--previewShadow);
}

.post-wrapper{
  display: grid;
  grid-template-columns: repeat(auto-fit, 320px);
  gap: 20px;
  justify-content: left;
  padding-bottom: 50px;
}

.post{
  border:  1px solid var(--borderColor);
  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
}

.thumbnail{
  display: block;
  width: 100%;
  height: 180px;
  object-fit: cover;
}

.post-preview{
  background-color: #fff;
  padding: 15px;
}

.post-title{
  color: black;
  margin: 0;
}

.post-intro{
  color: #4b5156;
  font-size: 14px;
}

.certificate-title{
  height: 0;
  padding-left: 20px;
}

.certificatesList{
  display: grid;
  grid-template-columns: repeat(auto-fit, 50%);
  align-items: center;
}

.certificate-image{
  width: 250px;
  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  vertical-align: center;
  padding: 20px;
}

.certificates{
  display: flex;
  }

  /*Work Experience*/

.work-exp{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(415px, 1fr));
  align-items: center;
}

.work-exp-image{
  /*width: 500px;
  height: 200px;*/
  max-width:90%;
  max-height:90%;
  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
  display: block;
  margin-left: auto;
  margin-right: auto;
}

@media screen and (max-width: 1200px){
  .main-container{
    width: 95%;
  }
}


@media screen and (max-width: 800px){
  .intro-wrapper{
  
    grid-template-columns: 1fr; /* 1 fr- 1 fraction */
    grid-template-areas: 
    'nav-wrapper' 
    'left-column'
    ' right-column';
  }
  .right-column{
    justify-content: center;
  }

}

